# xemu

./: .clang-format  .gitignore  .gitmodules  Info.plist  RCa16376  build.sh  configure  gdbstub.c  meson.build  meson_options.txt  shuriken-version.c  shuriken-version.h  version.rc  xemu-xbe.c  xemu-xbe.h
.github/workflows/: build.yml
accel/tcg/: cputlb.c
block/: nbd.c
chardev/: baum.c  char-fd.c  char-mux.c  char-pty.c  char-ringbuf.c  char-socket.c  char-udp.c  char-win-stdio.c  char-win.c  char.c  msmouse.c  spice.c  testdev.c  wctablet.c
data/: meson.build
hw/arm/: aspeed_ast2600.c  aspeed_soc.c  sysbus-fdt.c
hw/audio/: soundhw.c
hw/core/: bus.c  cpu-common.c
hw/i386/: acpi-build.c
hw/net/: eepro100.c
hw/pci/: pci.c  pci_bridge.c
hw/ppc/: pnv.c  pnv_core.c  spapr_drc.c
hw/s390x/: s390-virtio-ccw.c
hw/usb/: bus.c
hw/xbox/: acpi_xbox.c  acpi_xbox.h  amd_smbus.c  amd_smbus.h  chihiro-usb.c  chihiro.c  eeprom_generation.cpp  eeprom_generation.h  extract-iso.cpp  extract-xiso.h  lpc47m157.c  meson.build  nvnet.c  nvnet_regs.h  smbus.h  smbus_adm1032.c  smbus_cx25871.c  smbus_fs454.c  smbus_storage.c  smbus_xbox_smc.c  smbus_xcalibur.c  xbox.c  xbox.h  xbox_pci.c  xbox_pci.h  xid.c
hw/xbox/mcpx/: aci.c  adpcm.h  apu.c  apu.h  apu_debug.h  apu_regs.h  fpconv.h  meson.build  svf.h
hw/xbox/mcpx/dsp/: dsp.c  dsp.h  dsp_cpu.c  dsp_cpu.h  dsp_dis.inl  dsp_dma.c  dsp_dma.h  dsp_emu.inl  dsp_state.h
hw/xbox/nv2a/: debug.cpp  debug.h  intercept.cpp  intercept.h  lru.h  meson.build  nv2a.c  nv2a.h  nv2a_int.h  nv2a_regs.h  pbus.c  pcrtc.c  pfb.c  pfifo.c  pgraph.c  pgraph_methods.h  pmc.c  pramdac.c  prmcio.c  prmdio.c  prmvio.c  psh.cpp  psh.h  ptimer.c  pvideo.c  s3tc.cpp  s3tc.h  shaders.cpp  shaders.h  shaders_common.h  stubs.c  swizzle.cpp  swizzle.h  user.c  vsh.cpp  vsh.h
hw/xbox/nv2a/gl/: gloffscreen.h  gloffscreen_common.cpp  gloffscreen_sdl.cpp  meson.build
include/: qemu-common.h
include/chardev/: char.h
include/exec/: memop.h  memory.h
include/hw/: qdev-core.h  usb.h
include/hw/audio/: soundhw.h
include/hw/core/: cpu.h
include/hw/pci/: pci.h  pci_bridge.h
include/hw/ppc/: spapr_drc.h
include/monitor/: qdev.h
include/net/: net.h
include/qapi/: error.h
include/qapi/qmp/: qdict.h
include/qemu/: config-file.h  fast-hash.h  iov.h  lockable.h  main-loop.h  module.h  option.h  thread.h  timer.h
include/qom/: object.h
include/sysemu/: runstate.h
include/tcg/: tcg.h
include/ui/: console.h  input.h  kbd-state.h  sdl2.h  xemu-display.h
nbd/: client.c
net/: pcap.h
qapi/: ui.json
qom/: object.c  qom-qmp-cmds.c
scripts/: archive-source.sh  pack-file.py  shuriken-version.sh
scripts/qapi/: common.py  gen.py
softmmu/: main.c  meson.build  qdev-monitor.c  run-extra.cpp  runstate.c  tpm.c  vl.c
ui/: common.cpp  common.h  controls.cpp  controls.h  extract-xiso.cpp  extract-xiso.h  games.cpp  games.h  gamestats.cpp  gamestats.h  log.cpp  log.h  meson.build  sdl2-2d.c  sdl2-gl.c  sdl2-input.c  settings.cpp  settings.h  shader.cpp  shuriken.cpp  shuriken.h  ui-common.cpp  ui-common.h  ui-controls.cpp  ui-controls.h  ui-file.cpp  ui-file.h  ui-games.cpp  ui-games.h  ui-log.cpp  ui-log.h  ui-settings.cpp  ui-settings.h  ui-theme.cpp  ui.h  x_keymap.h  xemu-custom-widgets.cpp  xemu-custom-widgets.h  xemu-data.cpp  xemu-data.h  (+26 more)
ui/qemui/: console.c  gtk.c  input-barrier.c  sdl2.c
ui/vnc/: vnc.h  vnc_keysym.h
util/: error.c  meson.build  qemu-error.c  qsp.c  util-extra.cpp
winpcap-loader/: loader.c
winpcap-loader/include/: ip6_misc.h
winpcap-loader/include/pcap/: pcap.h
