specific_ss.add(files(
	'acpi_xbox.c',
	'amd_smbus.c',
	# 'chihiro-usb.c',
	# 'chihiro.c',
	'eeprom_generation.cpp',
	'extract-iso.cpp',
	'lpc47m157.c',
	'nvnet.c',
	'smbus_adm1032.c',
	'smbus_cx25871.c',
	'smbus_storage.c',
	'smbus_xbox_smc.c',
	'xbox.c',
	'xbox_pci.c',
	'xid.c',
	))
subdir('nv2a')
subdir('mcpx')
