specific_ss.add(files(
	'debug.cpp',
	'intercept.cpp',
	'nv2a.c',
	'pbus.c',
	'pcrtc.c',
	'pfb.c',
	'pfifo.c',
	'pgraph.c',
	'pmc.c',
	'pramdac.c',
	'prmcio.c',
	'prmdio.c',
	'prmvio.c',
	'psh.cpp',
	'ptimer.c',
	'pvideo.c',
	's3tc.cpp',
	'shaders.cpp',
	'stubs.c',
	'swizzle.cpp',
	'user.c',
	'vsh.cpp',
	))
subdir('gl')
